完成视频详情页

--- a/app/src/main/res/layout/view_title_bar.xml
+++ b/app/src/main/res/layout/view_title_bar.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@id/back_btn"
@@ -38,11 +42,12 @@
         android:text="右侧按钮"
         android:textColor="#FF212121"
         android:textSize="@dimen/sp_14"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
     <View
         android:id="@+id/divider"
         style="@style/div_horizontal"
         android:layout_alignParentBottom="true"
         android:background="#FF979797"/>
-</merge>
+</RelativeLayout>
