--- a/app/src/main/res/layout/dialog_video_progress.xml
+++ b/app/src/main/res/layout/dialog_video_progress.xml
@@ -7,34 +7,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@color/video_controller_widget_bg">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/video_controller_widget_bg"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_current"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/video_controller_widget_text"
-                android:textSize="14sp"/>
-
-            <TextView
-                android:id="@+id/tv_duration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/video_controller_widget_text"
-                android:textSize="14sp"/>
-        </LinearLayout>
+        android:background="@color/video_controller_widget_bg"
+        android:orientation="horizontal"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
 
         <TextView
-            android:id="@+id/tv_diff"
+            android:id="@+id/tv_current"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/video_controller_widget_text"
-            android:textSize="14sp"/>
+            android:textSize="12sp"/>
+
+        <TextView
+            android:id="@+id/tv_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/video_controller_widget_text"
+            android:textSize="12sp"/>
     </LinearLayout>
 </FrameLayout>
